--- a/ProteccionBarrial2021/login.html
+++ b/ProteccionBarrial2021/login.html
@@ -65,7 +65,7 @@
           <input type="password" name="contrasenia" id="contraseña" placeholder="Ingrese Contraseña">
           <center>
           <button type="submit" class="btn btn-primary" onclick="validarLogin()">Ingresar</button>
-          <a href="contrasenia.html">Olvidaste la contraseña? </center</a><br>
+          <a href="contrasenia.html">Olvidaste la contraseña? </center></a><br>
           <a href="registro.html">Registrarse</a>
         </form>
       </div>
