agregar proyecto anugular

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" sizes="16x16" href="../src/assets/logoSeguridad1.ico" type="image/ico">
   <meta charset="utf-8">
   <title>ProteccionBarrial</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+  </svg>
 </head>
 <body>
   <app-root></app-root>
